<resources>
    <string name="app_name">Friends Quiz</string>
    <string name="first_question">1. What is Ross allergic to?</string>
    <string name="first_question_first_answer">Kiwi, lobster and peanuts</string>
    <string name="first_question_second_answer">Eggs, kiwi and milk</string>
    <string name="first_question_third_answer">Peanuts, coffee and bananas</string>
    <string name="second_question">2. What is Chandler\'s middle name?</string>
    <string name="second_question_answer">Muriel</string>
    <string name="third_question">3. Which of the Friends worked at the coffee shop?</string>
    <string name="third_question_first_answer">Rachel</string>
    <string name="third_question_second_answer">Gunther</string>
    <string name="third_question_third_answer">Joey</string>
    <string name="fourth_question">4. What song did Ross sang to Emma to make her laugh?</string>
    <string name="fourth_question_first_answer">Ice ice baby</string>
    <string name="fourth_question_second_answer">Party in the USA</string>
    <string name="fourth_question_third_answer">Baby got back</string>
    <string name="fifth_question">5. \"Oh my God!\" is who\'s catchphrase?</string>
    <string name="fifth_question_first_answer">Janice</string>
    <string name="fifth_question_second_answer">Joey\'s grandmother</string>
    <string name="fifth_question_third_answer">Emily</string>
    <string name="sixth_question">6. Which of the following actors made an appearance in the show?</string>
    <string name="sixth_question_first_answer">Bruce Willis</string>
    <string name="sixth_question_second_answer">Brad Pitt</string>
    <string name="sixth_question_third_answer">Jean Claude Van Damme</string>
    <string name="seventh_question">7. What did Emily told Ross to do so they would get back together?</string>
    <string name="seventh_question_first_answer">Get rid of Marcel</string>
    <string name="seventh_question_second_answer">Stop going to Central Perk</string>
    <string name="seventh_question_third_answer">Stop seeing Rachel</string>
    <string name="eight_question">8. Who said this: \"You\'re over me? When were you under me?\"</string>
    <string name="eight_question_answer">Ross</string>
    <string name="ninth_question">9. What tattoo did Phoebe get?</string>
    <string name="ninth_question_first_answer">A coffee mug</string>
    <string name="ninth_question_second_answer">A guitar</string>
    <string name="ninth_question_third_answer">The world from far away</string>
    <string name="tenth_question">10. Who said the following: \"This is brand new information!\"</string>
    <string name="tenth_question_first_answer">Rachel</string>
    <string name="tenth_question_second_answer">Phoebe</string>
    <string name="tenth_question_third_answer">Monica</string>
    <string name="submit_button">Submit</string>
</resources>
